--- a/pom.xml
+++ b/pom.xml
@@ -1,97 +1,143 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>com.yonyou.iuap.pap</groupId>
-    <artifactId>baseservice_classic_demo</artifactId>
-    <version>3.5.5-RELEASE</version>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.yonyou.iuap.pap</groupId>
+	<artifactId>baseservice_classic_demo</artifactId>
+	<version>3.5.5-RELEASE</version>
 
-    <packaging>war</packaging>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <pap_base_bom.version>3.5.5-RELEASE</pap_base_bom.version>
-        <java.version>1.7</java.version>
-    </properties>
+	<packaging>war</packaging>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<pap_base_bom.version>3.5.5-RELEASE</pap_base_bom.version>
+		<java.version>1.7</java.version>
+	</properties>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>com.yonyou.iuap.pap.base</groupId>
-                <artifactId>pap_base_comp_bom</artifactId>
-                <version>${pap_base_bom.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-    <dependencies>
-        <dependency>
-            <groupId>com.yonyou.iuap.pap</groupId>
-            <artifactId>iuap-pap-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.yonyou.iuap.middleware</groupId>
-            <artifactId>starter</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        
-        <dependency>
-		    <groupId>com.yonyou.iuap.baseservice</groupId>
-		    <artifactId>iuap-pap-baseservice-statistics</artifactId>
-		</dependency>
-		
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.yonyou.iuap.pap.base</groupId>
+				<artifactId>pap_base_comp_bom</artifactId>
+				<version>${pap_base_bom.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+	<dependencies>
 		<dependency>
-	      <groupId>com.fasterxml.jackson.core</groupId>
-	      <artifactId>jackson-annotations</artifactId>
-	      <version>2.8.0</version>
-	    </dependency>
-	    <dependency>
-	      <groupId>com.fasterxml.jackson.core</groupId>
-	      <artifactId>jackson-core</artifactId>
-	      <version>2.8.9</version>
-	    </dependency>
-	    <dependency>
-		    <groupId>com.fasterxml.jackson.core</groupId>
-		 	<artifactId>jackson-databind</artifactId>
-		    <version>2.8.9</version>
-	    </dependency>
-        
-        <dependency>
-		  <groupId>org.apache.commons</groupId>
-		  <artifactId>commons-lang3</artifactId>
-		  <version>3.3.2</version>
+			<groupId>com.yonyou.iuap.pap</groupId>
+			<artifactId>iuap-pap-starter</artifactId>
 		</dependency>
-        
-         <!-- swagger2  -->
-        <!--swagger本身不支持spring mvc的，springfox把swagger包装了一下，让他可以支持springmvc-->
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-        </dependency>
-	    
-	<dependency>
-		  <groupId>com.yonyou.iuap</groupId>
-		  <artifactId>iuap-mybatis</artifactId>
-		  <version>3.2.3-RC002</version>
-	 </dependency>
-    </dependencies>
-    <build>
-        <finalName>baseservice_classic_demo</finalName>
-        <plugins>
-            <!-- compiler插件, 设定JDK版本 -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                    <showWarnings>true</showWarnings>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+		<dependency>
+			<groupId>com.yonyou.iuap.middleware</groupId>
+			<artifactId>starter</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.yonyou.iuap.baseservice</groupId>
+			<artifactId>iuap-pap-baseservice-statistics</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.8.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.8.9</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.8.9</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.3.2</version>
+		</dependency>
+
+		<!-- swagger2 -->
+		<!--swagger本身不支持spring mvc的，springfox把swagger包装了一下，让他可以支持springmvc -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.yonyou.iuap</groupId>
+			<artifactId>iuap-mybatis</artifactId>
+			<version>3.2.3-RC002</version>
+		</dependency>
+	</dependencies>
+	<!-- 多套环境配置 :profiles配置-->
+	<profiles>
+		<profile>
+			<!-- 本地开发环境 -->
+			<id>dev</id>
+			<properties>
+				<profiles.active>dev</profiles.active>
+			</properties>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+		</profile>
+		<profile>
+			<!-- 测试环境 -->
+			<id>test</id>
+			<properties>
+				<profiles.active>test</profiles.active>
+			</properties>
+		</profile>
+		<profile>
+			<!-- 生产环境 -->
+			<id>pro</id>
+			<properties>
+				<profiles.active>pro</profiles.active>
+			</properties>
+		</profile>
+	</profiles>
+	<build>
+		<finalName>baseservice_classic_demo</finalName>
+		<plugins>
+			<!-- compiler插件, 设定JDK版本 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					<showWarnings>true</showWarnings>
+					<encoding>${project.build.sourceEncoding}</encoding>
+				</configuration>
+			</plugin>
+		</plugins>
+		
+		<!-- 多套环境配置 :资源地址-->
+		<resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <!-- 资源根目录排除各环境的配置，防止在生成目录中多余其它目录 -->
+                <excludes>
+                    <exclude>test/*</exclude>
+                    <exclude>pro/*</exclude>
+                    <exclude>dev/*</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <directory>src/main/resources/${profiles.active}</directory>
+            </resource>
+        </resources>
+	</build>
+
+	
 </project>
